# TheEye

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-single-platform.yml  linux-build.yml  windows-build.yml
EyeRendererOld/: CMakeLists.txt
EyeRendererOld/libs/freeglut/: CMakeLists.txt
EyeRendererOld/src/: AbstractGlCamera.cpp  GlCamera.cpp  GlRenderer.cpp  GlRenderer.h  Matrix4x4.cpp  Matrix4x4.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
EyeRendererOld/src/cameras/: AbstractGlCamera.h  GlCamera.h  OrbitCamera.cpp  OrbitCamera.h
EyeRendererOld/src/math/: Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h
EyeRendererOld/src/objects/: GlRenderCube.cpp  GlRenderCube.h  GlRenderObject.cpp  GlRenderObject.h  GlRenderSphere.cpp  GlRenderSphere.h  GlRenderSphereOctahedron.cpp  GlRenderSphereOctahedron.h  GlRenderSpherePolar.cpp  GlRenderSpherePolar.h  GlRenderSphereTetrahedron.cpp  GlRenderSphereTetrahedron.h  GlRenderSubdividedSphere.cpp  GlRenderSubdividedSphere.h  GlRenderedInstance.cpp  GlRenderedInstance.h  SphereTextureMappings.cpp  SphereTextureMappings.h
EyeRendererOld/src/shaders/: basic.frag  basic.vert  singleTexture.frag
libs/: CMakeLists.txt
scripts/: BuildTools.sh  buildLinuxBinaries.sh  makeDebianPackage.sh
src/: AbstractScreenCapturer.h  Eye.cpp  Eye.h  Eye3dModel.cpp  Eye3dModel.h  EyeFaceAnalyzer.cpp  EyeFaceAnalyzer.h  EyeStateMachine.cpp  EyeStateMachine.h  EyeStates.cpp  EyeStates.h  FaceState.cpp  FaceState.h  LinuxScreenCapturer.cpp  LinuxScreenCapturer.h  MonitorPosition.cpp  MonitorPosition.h  eye.frag  main.cpp
src/linux/: LinuxScreenCapturer.cpp  LinuxScreenCapturer.h
src/windows/: WindowsScreenCapturer.cpp  WindowsScreenCapturer.h
